<resources>
    <string name="app_name">Steward Medicine</string>
    <string name="action_settings">Settings</string>
    <string name="ance_1">Here is a general outline on acne and how to treat it.</string>
    <string name="ance_2">KEY POINT: remember that pimples tend to come and go over a 4-6 week time frame. Treating the acne today does not make the current pimples go away. Instead, the treatments you put on today prevent the future pimples from starting. So it takes at least 4-6 weeks of treatment to start seeing results.</string>
    <string name="acne_video"><![CDATA[<html><body><iframe width="%1$f" height="%2$f" src="https://www.youtube.com/embed/C5Co4czoo5s" frameborder="0" </iframe></body></html>]]></string>
    <string name="heart_agina_1">** IMPORTANT **</string>
    <string name="heart_agina_2">• If you are worried that you may be having a heart attack, call 9-1-1 immediately or go to the closest Emergency Department.</string>
    <string name="heart_agina_3">• Do NOT waste valuable time by going to your family doctor’s office.</string>
    <string name="heart_agina_4">• TIME IS CRUCIAL. Too often, patients waste valuable time by waiting to book an appointment with their family doctor, or walking in to their family doctor’s office. Instead, go to the ER directly!</string>
    <string name="heart_agina_5">WHAT IS HEART DISEASE?</string>
    <string name="heart_agina_6">Your heart is a muscle that gets energy from blood carrying oxygen. Your heart needs a constant supply of blood to keep working properly. Coronary artery disease develops when a combination of fatty materials and scar tissue (called “plaque”) builds up in the blood vessels that supply blood to your heart. The plaque buildup narrows the arteries and prevents the heart from getting enough blood.</string>
    <string name="heart_agina_7">Here are a few brief videos to help explain heart attacks and angina:</string>
    <string name="heart_agina_8">THE FOLLOWING ARE SIGNS OF HAVING A HEART ATTACK:</string>
    <string name="heart_agina_9">(click the picture for even more information)</string>
    <string name="heart_agina_10">FOR MORE INFORMATION:</string>
    <string name="heart_agina_11">Check out the Heart &amp; Stroke Foundation’s website.</string>
    <string name="heart_attack_video"><![CDATA[<html><body><iframe width="%1$f" height="%2$f" src="https://www.youtube.com/embed/LA2DuxCcO4g" frameborder="0" </iframe></body></html>]]></string>
    <string name="angina_video"><![CDATA[<html><body><iframe width="%1$f" height="%2$f" src="https://www.youtube.com/embed/7PsDK2R95Sg" frameborder="0" </iframe></body></html>]]></string>
    <string name="heart_attack_symptoms_video"><![CDATA[<html><body><iframe width="%1$f" height="%2$f" src="https://www.youtube.com/embed/o3RFrAKD1O4" frameborder="0" </iframe></body></html>]]></string>
    <string name="angina_and_chest_pains_video"><![CDATA[<html><body><iframe width="%1$f" height="%2$f" src="https://www.youtube.com/embed/5ClUXbLpu1M" frameborder="0" </iframe></body></html>]]></string>
    <string name="annual_phyical_1">WHY YOU DON\&apos;T NEED AN ANNUAL PHYSICAL:</string>
    <string name="annual_phyical_2">• The old &quot;Annual Physical&quot; used to be a visit when the doctor could review your file to ensure that all routine tests were up to date.</string>
    <string name="annual_phyical_3">• With the computers in our office, we always have reminders that tell us when your tests are overdue. Therefore, an “Annual Physical” is no longer required for this purpose.</string>
    <string name="annual_phyical_4">• The “Annual Physical” was also a time for a complete ‘head-to-toe’ examination. However, research has shown that this type of exam does not provide any benefit.</string>
    <string name="annual_phyical_6">&quot;MORE&quot; IS NOT ALWAYS BETTER ...</string>
    <string name="annual_phyical_7">Also, CLICK HERE for more information on why physicals are no longer suggested.</string>
    <string name="annual_phyical_8">INSTEAD OF ASKING TO BOOK A &quot;PHYSICAL&quot; ...</string>
    <string name="annual_phyical_9">• Ask to book a visit for a specific concern(s) that you may have.</string>
    <string name="annual_phyical_10">• Ask if you have any blood work, tests, or cancer screens that are overdue. These can often be booked without actually seeing your doctor.</string>
    <string name="annual_phyical_11">• Ask to book a visit for a PAP test if that is what you are specifically concerned about.</string>
    <string name="liver_1">Fatty Liver</string>
    <string name="liver_3">WHAT IS “FATTY LIVER”?</string>
    <string name="liver_4">Fatty Liver refers to a condition where fat cells are deposited in your liver. The fat cells come from things like your diet, alcohol, and cholesterol. If you get too much fat in your liver, it can be harmful. It can cause damage by scarring, inflammation, and cirrhosis.</string>
    <string name="liver_5">Most of the time, you will not have any symptoms from a fatty liver.  Symptoms do not appear until your liver is very damaged (in the later stages of fatty liver disease).</string>
    <string name="liver_6">Your doctor may discover signs of fatty liver through routine blood tests. Sometimes, fatty liver is found by accident (“coincidentally”) by an ultrasound of your belly that was ordered for some other reason.</string>
    <string name="liver_7">ALCOHOL:</string>
    <string name="liver_8">Drinking too much alcohol is common cause for having a fatty liver. If you drink more than the following, it can be harmful for your health:</string>
    <string name="liver_9">• 14 drinks per week for males</string>
    <string name="liver_11">7 drinks per week for females</string>
    <string name="liver_12">NON-ALCOHOLIC FATTY LIVER DISEASE:</string>
    <string name="liver_13">People can have fatty liver disease for reasons other than alcohol. This is called “Non-Alcoholic Fatty Liver Disease” (NAFLD). This is becoming a very common disease in North America due to increased rates of obesity, diabetes, poor diet, and lack of exercise.</string>
    <string name="liver_14">For even more information on Fatty Liver Disease, be sure to visit the:</string>
    <string name="liver_15">Canadian Liver Foundation’s website.</string>
    <string name="liver_16">HOW DO YOU TREAT OR PREVENT FATTY LIVER DISEASE?</string>
    <string name="liver_17">There are not many proven ways to treat fatty liver disease. The main treatments are simple, but sometimes hard for people:</string>
    <string name="liver_18">• Try to <b>stop drinking alcohol</b>, or at least cut back to the recommended amounts shown above.</string>
    <string name="liver_19">• Besides limiting alcohol, <b>LOSING WEIGHT</b> is the absolute best way to treat fatty liver disease.</string>
    <string name="liver_20">• Eat a balanced and <b>healthy diet</b>.</string>
    <string name="liver_21">• <b>Exercise</b> and maintain an active lifestyle.</string>
    <string name="liver_22">• Some research has shown that taking Vitamin E (800 units per day) can help. <b>Vitamin E</b> can be purchased “over-the-counter” and is not a prescription medication.</string>
    <string name="liver_23">WHAT IS “FATTY LIVER”?</string>
    <string name="liver_24">If you have been told you have fatty liver disease, you should try to drink even less than that. Ideally, you should drink as little alcohol as possible.</string>
    <string name="pink_eye_1">WHAT IS PINK EYE?</string>
    <string name="pink_eye_2">“Pink eye” is the everyday term people use to describe an infection or irritation of the eye. The medical term for pinkeye is “conjunctivitis.”</string>
    <string name="pink_eye_3">If you have pinkeye, your eye (or eyes) might:</string>
    <string name="pink_eye_4">● Turn red or pink</string>
    <string name="pink_eye_5">● Weep or ooze a gooey liquid</string>
    <string name="pink_eye_6">● Feel itchy, irritated, or mild burning</string>
    <string name="pink_eye_7">● Get stuck shut</string>
    <string name="pink_eye_8">WHAT CAUSES PINK EYE?</string>
    <string name="pink_eye_9">Pinkeye can be caused by an infection, allergies, or an unknown irritation. The most common form of pink eye is caused by a VIRAL infection and is commonly associated with common cold symptoms.</string>
    <string name="pink_eye_10">CAN YOU CATCH PINK EYE FROM SOMEONE ELSE?</string>
    <string name="pink_eye_11">Yes. When pinkeye is caused by an infection, it can spread easily. Usually, people catch it from touching something that has touched an infected person’s eye.</string>
    <string name="pink_eye_12">If you know someone with pinkeye, avoid touching his or her pillowcases, towels, or other personal items.</string>
    <string name="pink_eye_13">WHEN SHOULD YOU SEE A DOCTOR?</string>
    <string name="pink_eye_14"><b><i>Most of the time, the pink eye that people get that is associated with common cold symptoms does NOT need to be seen by a doctor. In fact, you should probably stay home to avoid spreading the germs.</i></b></string>
    <string name="pink_eye_15">Reasons to see a doctor:</string>
    <string name="pink_eye_16">• if you have pink eye that is not associated with cold symptoms.</string>
    <string name="pink_eye_17">• if your eye is “painful” or “hurts”, as opposed to simply feeling irritated.</string>
    <string name="pink_eye_18">• if your eye is sensitive to light.</string>
    <string name="pink_eye_19">• if you notice changes in your vision (besides just mild blurriness from the extra tearing or mucous).</string>
    <string name="pink_eye_20">• if your eye is more red than pink and/or has A LOT of mucous or pus (as in the second picture here).</string>
    <string name="pink_eye_21">• if you have been wearing contact lenses along with having pink eye.</string>
    <string name="pink_eye_22">• if things are not improving after a week.</string>
    <string name="pink_eye_23">• if you have any other concerns that something may be more seriously wrong.</string>
    <string name="pink_eye_24">CAN PINK EYE BE TREATED?</string>
    <string name="pink_eye_25">When pink eye is caused by infection, it is usually caused by a VIRUS, so antibiotics or drops will NOT help.  (Antibiotics do not kill viruses; they only kill bacteria, which is a different type of germ). Pink eye caused by a virus will usually go away on its own in a few days, but may last even a week or more.</string>
    <string name="pink_eye_26">You may consider using over-the-counter natural tear drops. These drops will not cure the pinkeye, but they can help with itchiness and irritation.</string>
    <string name="pink_eye_27">When using eye drops for infection, do not touch your good eye after touching your affected eye, and do not touch the bottle or dropper directly in one eye and then use it in the other. Both of these things can cause the infection to spread from one eye to the other.</string>
    <string name="pink_eye_28">WHAT IF I WEAR CONTACT LENSES?</string>
    <string name="pink_eye_29">If you wear contact lenses and you have symptoms of pinkeye, it may be important to have a doctor look at your eyes. In people who wear contacts, the symptoms of pinkeye can be caused by serious problems.</string>
    <string name="pink_eye_30">While you have pink eye, you should stop wearing your contacts for a short time. Plus, you might need to throw away your contact lens case and carefully clean your contacts. If your contacts are disposable, you will want to throw them away and start fresh.</string>
    <string name="pink_eye_31">CAN PINK EYE BE PREVENTED?</string>
    <string name="pink_eye_32">To keep from getting or spreading pinkeye, wash your hands often with soap and water. If washing is not possible, alcohol-based hand gels work, too. AVOID TOUCHING OR RUBBING YOUR EYES. Also, avoid sharing towels, bed clothes, or other personal items with a person who has pinkeye.</string>
</resources>