<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_1"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_2"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_3"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_4"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_5"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_6"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_7"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/pink_eye1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_8"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_9"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_10"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_11"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_12"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_13"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_14"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_15"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_16"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_17"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_18"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_19"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_20"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_21"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_22"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_23"
            android:layout_marginBottom="15dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/pinkeye_bacteria"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_24"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_25"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_26"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_27"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_28"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_29"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_30"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_31"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pink_eye_32"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
    </LinearLayout>
</ScrollView>