<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_1"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_3"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <WebView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/liver_vid_1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_23"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_4"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_5"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_6"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/liverpictures"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_7"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_8"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_9"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_11"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_24"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_12"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_13"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_14"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_15"
            android:layout_marginBottom="30dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:layout_gravity="center"
            android:id="@+id/liver_button_one"
            android:background="@drawable/transparent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_16"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_17"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_18"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_19"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_20"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_21"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_22"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:textColor="@color/text_color"/>





    </LinearLayout>
</ScrollView>