<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_acne_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:text="@string/annual_phyical_1"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/text_color"
            android:text="@string/annual_phyical_2"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_marginBottom="5dp"
            android:text="@string/annual_phyical_3"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_marginBottom="25dp"
            android:text="@string/annual_phyical_4"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_marginBottom="10dp"
            android:text="@string/annual_phyical_6"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <WebView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/transparent"
            android:id="@+id/annual_physical_vid"/>
        <Button
            android:text="@string/annual_phyical_7"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="25dp"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:paddingBottom="25dp"
            android:id="@+id/annual_physical_button_1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_marginBottom="10dp"
            android:text="@string/annual_phyical_8"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_marginBottom="5dp"
            android:text="@string/annual_phyical_9"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_marginBottom="5dp"
            android:text="@string/annual_phyical_10"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:layout_marginBottom="30dp"
            android:text="@string/annual_phyical_11"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/annual_physical_dual_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColorLink="@color/colorPrimary" />



    </LinearLayout>

</ScrollView>